[gd_scene load_steps=5 format=4 uid="uid://c4flyjjk1ioun"]

[ext_resource type="Script" path="res://scripts/elegir_nombre_usuario.gd" id="1_m1krl"]
[ext_resource type="TileSet" uid="uid://tr1qsvw38yju" path="res://tiles/tileset_paneles_mejoras.tres" id="2_loa2d"]
[ext_resource type="FontFile" uid="uid://bfdlmvbyp8yqh" path="res://fonts/EquipmentPro.otf" id="3_ge4rw"]
[ext_resource type="FontFile" uid="uid://ba61w4ocvfhxb" path="res://fonts/ExpressionPro.otf" id="4_sg0or"]

[node name="ElegirNombreUsuario" type="Control"]
layout_mode = 3
anchor_left = 0.006
anchor_top = 0.011
anchor_right = 0.995
anchor_bottom = 0.988
offset_left = 572.8
offset_top = 223.368
offset_right = -574.0
offset_bottom = -236.856
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_m1krl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -580.0
offset_top = -235.0
offset_right = 580.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="BotonGuardarBoton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -146.0
offset_top = 182.0
offset_right = -84.0
offset_bottom = 242.0
mouse_default_cursor_shape = 2

[node name="BotonAtrasBoton" type="Button" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 182.0
offset_right = 189.0
offset_bottom = 242.0
mouse_default_cursor_shape = 2

[node name="Fondo" type="TileMapLayer" parent="."]
position = Vector2(-3, 20)
tile_map_data = PackedByteArray("AAD0//j/AAAAAAIAAAAOAPj/AAACAAIAAAANAPj/AAABAAIAAAAMAPj/AAABAAIAAAALAPj/AAABAAIAAAAKAPj/AAABAAIAAAAJAPj/AAABAAIAAAAIAPj/AAABAAIAAAAHAPj/AAABAAIAAAAGAPj/AAABAAIAAAAFAPj/AAABAAIAAAAEAPj/AAABAAIAAAADAPj/AAABAAIAAAACAPj/AAABAAIAAAABAPj/AAABAAIAAAAAAPj/AAABAAIAAAD///j/AAABAAIAAAD+//j/AAABAAIAAAD9//j/AAABAAIAAAD8//j/AAABAAIAAAD7//j/AAABAAIAAAD6//j/AAABAAIAAAD5//j/AAABAAIAAAD4//j/AAABAAIAAAD3//j/AAABAAIAAAD2//j/AAABAAIAAAD1//j/AAABAAIAAAD0//n/AAAAAAMAAAD0//r/AAAAAAMAAAD0//v/AAAAAAMAAAD0//z/AAAAAAMAAAD0//3/AAAAAAMAAAD0//7/AAAAAAMAAAD0////AAAAAAMAAAD0/wAAAAAAAAMAAAD0/wEAAAAAAAMAAAD0/wIAAAAAAAMAAAD0/wMAAAAAAAMAAAD0/wQAAAAAAAMAAAD0/wUAAAAAAAMAAAD0/wYAAAAAAAMAAAD0/wcAAAAAAAMAAAAOAPn/AAACAAMAAAAOAPr/AAACAAMAAAAOAPv/AAACAAMAAAAOAPz/AAACAAMAAAAOAP3/AAACAAMAAAAOAP7/AAACAAMAAAAOAP//AAACAAMAAAAOAAAAAAACAAMAAAAOAAEAAAACAAMAAAAOAAIAAAACAAMAAAAOAAMAAAACAAMAAAAOAAQAAAACAAMAAAAOAAUAAAACAAMAAAAOAAYAAAACAAMAAAAOAAcAAAACAAMAAAD0/w8AAAAAAAQAAAAOAA8AAAACAAQAAAAOAAgAAAACAAMAAAAOAAkAAAACAAMAAAAOAAoAAAACAAMAAAAOAAsAAAACAAMAAAAOAAwAAAACAAMAAAAOAA0AAAACAAMAAAAOAA4AAAACAAMAAAANAA8AAAABAAQAAAAMAA8AAAABAAQAAAALAA8AAAABAAQAAAAKAA8AAAABAAQAAAAJAA8AAAABAAQAAAAIAA8AAAABAAQAAAAHAA8AAAABAAQAAAAGAA8AAAABAAQAAAAFAA8AAAABAAQAAAAEAA8AAAABAAQAAAADAA8AAAABAAQAAAACAA8AAAABAAQAAAABAA8AAAABAAQAAAAAAA8AAAABAAQAAAD//w8AAAABAAQAAAD+/w8AAAABAAQAAAD9/w8AAAABAAQAAAD8/w8AAAABAAQAAAD7/w8AAAABAAQAAAD6/w8AAAABAAQAAAD5/w8AAAABAAQAAAD4/w8AAAABAAQAAAD3/w8AAAABAAQAAAD2/w8AAAABAAQAAAD1/w8AAAABAAQAAAD0/wgAAAAAAAMAAAD0/wkAAAAAAAMAAAD0/woAAAAAAAMAAAD0/wsAAAAAAAMAAAD0/wwAAAAAAAMAAAD0/w0AAAAAAAMAAAD0/w4AAAAAAAMAAAD//wYAAAABAAMAAAD//wUAAAABAAMAAAD//wQAAAABAAMAAAD//wMAAAABAAMAAAD//wIAAAABAAMAAAD//wEAAAABAAMAAAD//wAAAAABAAMAAAD/////AAABAAMAAAD///7/AAABAAMAAAD///3/AAABAAMAAAD///z/AAABAAMAAAD///v/AAABAAMAAAD///r/AAABAAMAAAD///n/AAABAAMAAAD+//n/AAABAAMAAAD9//n/AAABAAMAAAD8//n/AAABAAMAAAD7//n/AAABAAMAAAD6//n/AAABAAMAAAD5//n/AAABAAMAAAD4//n/AAABAAMAAAD3//n/AAABAAMAAAD2//n/AAABAAMAAAD1//n/AAABAAMAAAD1//r/AAABAAMAAAD1//v/AAABAAMAAAD1//z/AAABAAMAAAD1//3/AAABAAMAAAD1//7/AAABAAMAAAD1////AAABAAMAAAD1/wAAAAABAAMAAAD1/wEAAAABAAMAAAD1/wIAAAABAAMAAAD1/wMAAAABAAMAAAD1/wQAAAABAAMAAAD1/wUAAAABAAMAAAD1/wYAAAABAAMAAAD1/wcAAAABAAMAAAD1/wgAAAABAAMAAAD1/wkAAAABAAMAAAD1/woAAAABAAMAAAD1/wsAAAABAAMAAAD1/wwAAAABAAMAAAD1/w0AAAABAAMAAAD1/w4AAAABAAMAAAD2/w4AAAABAAMAAAD2/w0AAAABAAMAAAD2/wwAAAABAAMAAAD2/wsAAAABAAMAAAD2/woAAAABAAMAAAD2/wkAAAABAAMAAAD2/wgAAAABAAMAAAD2/wcAAAABAAMAAAD2/wYAAAABAAMAAAD2/wUAAAABAAMAAAD2/wQAAAABAAMAAAD2/wMAAAABAAMAAAD2/wIAAAABAAMAAAD2/wEAAAABAAMAAAD2/wAAAAABAAMAAAD2////AAABAAMAAAD2//7/AAABAAMAAAD2//3/AAABAAMAAAD2//z/AAABAAMAAAD2//v/AAABAAMAAAD2//r/AAABAAMAAAD3//r/AAABAAMAAAD3//v/AAABAAMAAAD3//z/AAABAAMAAAD3//3/AAABAAMAAAD3//7/AAABAAMAAAD3////AAABAAMAAAD3/wAAAAABAAMAAAD3/wEAAAABAAMAAAD3/wIAAAABAAMAAAD3/wMAAAABAAMAAAD3/wQAAAABAAMAAAD3/wUAAAABAAMAAAD3/wYAAAABAAMAAAD3/wcAAAABAAMAAAD3/wgAAAABAAMAAAD3/wkAAAABAAMAAAD3/woAAAABAAMAAAD3/wsAAAABAAMAAAD3/wwAAAABAAMAAAD3/w0AAAABAAMAAAD3/w4AAAABAAMAAAD4/w4AAAABAAMAAAD4/w0AAAABAAMAAAD4/wwAAAABAAMAAAD4/wsAAAABAAMAAAD4/woAAAABAAMAAAD4/wkAAAABAAMAAAD4/wgAAAABAAMAAAD4/wcAAAABAAMAAAD4/wYAAAABAAMAAAD4/wUAAAABAAMAAAD4/wQAAAABAAMAAAD4/wMAAAABAAMAAAD4/wIAAAABAAMAAAD4/wEAAAABAAMAAAD4/wAAAAABAAMAAAD4////AAABAAMAAAD4//7/AAABAAMAAAD4//3/AAABAAMAAAD4//z/AAABAAMAAAD4//v/AAABAAMAAAD4//r/AAABAAMAAAD5//r/AAABAAMAAAD5//v/AAABAAMAAAD5//z/AAABAAMAAAD5//3/AAABAAMAAAD5//7/AAABAAMAAAD5////AAABAAMAAAD5/wAAAAABAAMAAAD5/wEAAAABAAMAAAD5/wIAAAABAAMAAAD5/wMAAAABAAMAAAD5/wQAAAABAAMAAAD5/wUAAAABAAMAAAD5/wYAAAABAAMAAAD5/wcAAAABAAMAAAD5/wgAAAABAAMAAAD5/wkAAAABAAMAAAD5/woAAAABAAMAAAD5/wsAAAABAAMAAAD5/wwAAAABAAMAAAD5/w0AAAABAAMAAAD5/w4AAAABAAMAAAD6/w4AAAABAAMAAAD6/w0AAAABAAMAAAD6/wwAAAABAAMAAAD6/wsAAAABAAMAAAD6/woAAAABAAMAAAD6/wkAAAABAAMAAAD6/wgAAAABAAMAAAD6/wcAAAABAAMAAAD6/wYAAAABAAMAAAD6/wUAAAABAAMAAAD6/wQAAAABAAMAAAD6/wMAAAABAAMAAAD6/wIAAAABAAMAAAD6/wEAAAABAAMAAAD6/wAAAAABAAMAAAD6////AAABAAMAAAD6//7/AAABAAMAAAD6//3/AAABAAMAAAD6//z/AAABAAMAAAD6//v/AAABAAMAAAD6//r/AAABAAMAAAD7//r/AAABAAMAAAD7//v/AAABAAMAAAD7//z/AAABAAMAAAD7//3/AAABAAMAAAD7//7/AAABAAMAAAD7////AAABAAMAAAD7/wAAAAABAAMAAAD7/wEAAAABAAMAAAD7/wIAAAABAAMAAAD7/wMAAAABAAMAAAD7/wQAAAABAAMAAAD7/wUAAAABAAMAAAD7/wYAAAABAAMAAAD7/wcAAAABAAMAAAD7/wgAAAABAAMAAAD7/wkAAAABAAMAAAD7/woAAAABAAMAAAD7/wsAAAABAAMAAAD7/wwAAAABAAMAAAD7/w0AAAABAAMAAAD7/w4AAAABAAMAAAD8/w4AAAABAAMAAAD8/w0AAAABAAMAAAD8/wwAAAABAAMAAAD8/wsAAAABAAMAAAD8/woAAAABAAMAAAD8/wkAAAABAAMAAAD8/wgAAAABAAMAAAD8/wcAAAABAAMAAAD8/wYAAAABAAMAAAD8/wUAAAABAAMAAAD8/wQAAAABAAMAAAD8/wMAAAABAAMAAAD8/wIAAAABAAMAAAD8/wEAAAABAAMAAAD8/wAAAAABAAMAAAD8////AAABAAMAAAD8//7/AAABAAMAAAD8//3/AAABAAMAAAD8//z/AAABAAMAAAD8//v/AAABAAMAAAD8//r/AAABAAMAAAD9//r/AAABAAMAAAD9//v/AAABAAMAAAD9//z/AAABAAMAAAD9//3/AAABAAMAAAD9//7/AAABAAMAAAD9////AAABAAMAAAD9/wAAAAABAAMAAAD9/wEAAAABAAMAAAD9/wIAAAABAAMAAAD9/wMAAAABAAMAAAD9/wQAAAABAAMAAAD9/wUAAAABAAMAAAD9/wYAAAABAAMAAAD9/wcAAAABAAMAAAD9/wgAAAABAAMAAAD9/wkAAAABAAMAAAD9/woAAAABAAMAAAD9/wsAAAABAAMAAAD9/wwAAAABAAMAAAD9/w0AAAABAAMAAAD9/w4AAAABAAMAAAD+/w4AAAABAAMAAAD+/w0AAAABAAMAAAD+/wwAAAABAAMAAAD+/wsAAAABAAMAAAD+/woAAAABAAMAAAD+/wkAAAABAAMAAAD+/wgAAAABAAMAAAD+/wcAAAABAAMAAAD+/wYAAAABAAMAAAD+/wUAAAABAAMAAAD+/wQAAAABAAMAAAD+/wMAAAABAAMAAAD+/wIAAAABAAMAAAD+/wEAAAABAAMAAAD+/wAAAAABAAMAAAD+////AAABAAMAAAD+//7/AAABAAMAAAD+//3/AAABAAMAAAD+//z/AAABAAMAAAD+//v/AAABAAMAAAD+//r/AAABAAMAAAD//wcAAAABAAMAAAD//wgAAAABAAMAAAD//wkAAAABAAMAAAD//woAAAABAAMAAAD//wsAAAABAAMAAAD//wwAAAABAAMAAAD//w0AAAABAAMAAAD//w4AAAABAAMAAAAAAA4AAAABAAMAAAAAAA0AAAABAAMAAAAAAAwAAAABAAMAAAAAAAsAAAABAAMAAAAAAAoAAAABAAMAAAAAAAkAAAABAAMAAAAAAAgAAAABAAMAAAAAAAcAAAABAAMAAAAAAAYAAAABAAMAAAAAAAUAAAABAAMAAAAAAAQAAAABAAMAAAAAAAMAAAABAAMAAAAAAAIAAAABAAMAAAAAAAEAAAABAAMAAAAAAAAAAAABAAMAAAAAAP//AAABAAMAAAAAAP7/AAABAAMAAAAAAP3/AAABAAMAAAAAAPz/AAABAAMAAAAAAPv/AAABAAMAAAAAAPr/AAABAAMAAAAAAPn/AAABAAMAAAABAPn/AAABAAMAAAABAPr/AAABAAMAAAABAPv/AAABAAMAAAABAPz/AAABAAMAAAABAP3/AAABAAMAAAABAP7/AAABAAMAAAABAP//AAABAAMAAAABAAAAAAABAAMAAAABAAEAAAABAAMAAAABAAIAAAABAAMAAAABAAMAAAABAAMAAAABAAQAAAABAAMAAAABAAUAAAABAAMAAAABAAYAAAABAAMAAAABAAcAAAABAAMAAAABAAgAAAABAAMAAAABAAkAAAABAAMAAAABAAoAAAABAAMAAAABAAsAAAABAAMAAAABAAwAAAABAAMAAAABAA0AAAABAAMAAAABAA4AAAABAAMAAAACAA4AAAABAAMAAAACAA0AAAABAAMAAAACAAwAAAABAAMAAAACAAsAAAABAAMAAAACAAoAAAABAAMAAAACAAkAAAABAAMAAAACAAgAAAABAAMAAAACAAcAAAABAAMAAAACAAYAAAABAAMAAAACAAUAAAABAAMAAAACAAQAAAABAAMAAAACAAMAAAABAAMAAAACAAIAAAABAAMAAAACAAEAAAABAAMAAAACAAAAAAABAAMAAAACAP//AAABAAMAAAACAP7/AAABAAMAAAACAP3/AAABAAMAAAACAPz/AAABAAMAAAACAPv/AAABAAMAAAACAPr/AAABAAMAAAACAPn/AAABAAMAAAADAPn/AAABAAMAAAADAPr/AAABAAMAAAADAPv/AAABAAMAAAADAPz/AAABAAMAAAADAP3/AAABAAMAAAADAP7/AAABAAMAAAADAP//AAABAAMAAAADAAAAAAABAAMAAAADAAEAAAABAAMAAAADAAIAAAABAAMAAAADAAMAAAABAAMAAAADAAQAAAABAAMAAAADAAUAAAABAAMAAAADAAYAAAABAAMAAAADAAcAAAABAAMAAAADAAgAAAABAAMAAAADAAkAAAABAAMAAAADAAoAAAABAAMAAAADAAsAAAABAAMAAAADAAwAAAABAAMAAAADAA0AAAABAAMAAAADAA4AAAABAAMAAAAEAA4AAAABAAMAAAAEAA0AAAABAAMAAAAEAAwAAAABAAMAAAAEAAsAAAABAAMAAAAEAAoAAAABAAMAAAAEAAkAAAABAAMAAAAEAAgAAAABAAMAAAAEAAcAAAABAAMAAAAEAAYAAAABAAMAAAAEAAUAAAABAAMAAAAEAAMAAAABAAMAAAAEAAIAAAABAAMAAAAEAAEAAAABAAMAAAAEAAAAAAABAAMAAAAEAP//AAABAAMAAAAEAP7/AAABAAMAAAAEAP3/AAABAAMAAAAEAPz/AAABAAMAAAAEAPv/AAABAAMAAAAEAPr/AAABAAMAAAAEAPn/AAABAAMAAAAFAPn/AAABAAMAAAAFAPr/AAABAAMAAAAFAPv/AAABAAMAAAAFAPz/AAABAAMAAAAFAP3/AAABAAMAAAAFAP7/AAABAAMAAAAFAP//AAABAAMAAAAFAAAAAAABAAMAAAAFAAEAAAABAAMAAAAFAAIAAAABAAMAAAAFAAMAAAABAAMAAAAFAAQAAAABAAMAAAAFAAUAAAABAAMAAAAFAAYAAAABAAMAAAAFAAcAAAABAAMAAAAFAAgAAAABAAMAAAAFAAkAAAABAAMAAAAFAAoAAAABAAMAAAAFAAsAAAABAAMAAAAFAAwAAAABAAMAAAAFAA0AAAABAAMAAAAFAA4AAAABAAMAAAAGAA4AAAABAAMAAAAGAA0AAAABAAMAAAAGAAwAAAABAAMAAAAGAAsAAAABAAMAAAAGAAoAAAABAAMAAAAGAAkAAAABAAMAAAAGAAgAAAABAAMAAAAGAAcAAAABAAMAAAAGAAYAAAABAAMAAAAGAAUAAAABAAMAAAAGAAQAAAABAAMAAAAGAAMAAAABAAMAAAAGAAIAAAABAAMAAAAGAAEAAAABAAMAAAAGAAAAAAABAAMAAAAGAP//AAABAAMAAAAGAP7/AAABAAMAAAAGAP3/AAABAAMAAAAGAPz/AAABAAMAAAAGAPv/AAABAAMAAAAGAPr/AAABAAMAAAAGAPn/AAABAAMAAAAHAPn/AAABAAMAAAAHAPr/AAABAAMAAAAHAPv/AAABAAMAAAAHAPz/AAABAAMAAAAHAP3/AAABAAMAAAAHAP7/AAABAAMAAAAHAP//AAABAAMAAAAHAAAAAAABAAMAAAAHAAEAAAABAAMAAAAHAAIAAAABAAMAAAAHAAMAAAABAAMAAAAHAAQAAAABAAMAAAAHAAUAAAABAAMAAAAHAAYAAAABAAMAAAAHAAcAAAABAAMAAAAHAAgAAAABAAMAAAAHAAkAAAABAAMAAAAHAAoAAAABAAMAAAAHAAsAAAABAAMAAAAHAAwAAAABAAMAAAAHAA0AAAABAAMAAAAHAA4AAAABAAMAAAAIAA4AAAABAAMAAAAIAA0AAAABAAMAAAAIAAwAAAABAAMAAAAIAAsAAAABAAMAAAAIAAoAAAABAAMAAAAIAAkAAAABAAMAAAAIAAgAAAABAAMAAAAIAAcAAAABAAMAAAAIAAYAAAABAAMAAAAIAAUAAAABAAMAAAAIAAQAAAABAAMAAAAIAAMAAAABAAMAAAAIAAIAAAABAAMAAAAIAAEAAAABAAMAAAAIAAAAAAABAAMAAAAIAP//AAABAAMAAAAIAP7/AAABAAMAAAAIAP3/AAABAAMAAAAIAPz/AAABAAMAAAAIAPv/AAABAAMAAAAIAPr/AAABAAMAAAAIAPn/AAABAAMAAAAJAPn/AAABAAMAAAAJAPr/AAABAAMAAAAJAPv/AAABAAMAAAAJAPz/AAABAAMAAAAJAP3/AAABAAMAAAAJAP7/AAABAAMAAAAJAP//AAABAAMAAAAJAAAAAAABAAMAAAAJAAEAAAABAAMAAAAJAAIAAAABAAMAAAAJAAMAAAABAAMAAAAJAAQAAAABAAMAAAAJAAUAAAABAAMAAAAJAAYAAAABAAMAAAAJAAcAAAABAAMAAAAJAAgAAAABAAMAAAAJAAkAAAABAAMAAAAJAAoAAAABAAMAAAAJAAsAAAABAAMAAAAJAAwAAAABAAMAAAAJAA0AAAABAAMAAAAJAA4AAAABAAMAAAAKAA4AAAABAAMAAAAKAA0AAAABAAMAAAAKAAwAAAABAAMAAAAKAAsAAAABAAMAAAAKAAoAAAABAAMAAAAKAAkAAAABAAMAAAAKAAgAAAABAAMAAAAKAAcAAAABAAMAAAAKAAYAAAABAAMAAAAKAAUAAAABAAMAAAAKAAQAAAABAAMAAAAKAAMAAAABAAMAAAAKAAIAAAABAAMAAAAKAAEAAAABAAMAAAAKAAAAAAABAAMAAAAKAP//AAABAAMAAAAKAP7/AAABAAMAAAAKAP3/AAABAAMAAAAKAPz/AAABAAMAAAAKAPv/AAABAAMAAAAKAPr/AAABAAMAAAAKAPn/AAABAAMAAAALAPn/AAABAAMAAAALAPr/AAABAAMAAAALAPv/AAABAAMAAAALAPz/AAABAAMAAAALAP3/AAABAAMAAAALAP7/AAABAAMAAAALAP//AAABAAMAAAALAAAAAAABAAMAAAALAAEAAAABAAMAAAALAAIAAAABAAMAAAALAAMAAAABAAMAAAALAAQAAAABAAMAAAALAAUAAAABAAMAAAALAAYAAAABAAMAAAALAAcAAAABAAMAAAALAAgAAAABAAMAAAALAAkAAAABAAMAAAALAAoAAAABAAMAAAALAAsAAAABAAMAAAALAAwAAAABAAMAAAALAA0AAAABAAMAAAALAA4AAAABAAMAAAAMAA4AAAABAAMAAAAMAA0AAAABAAMAAAAMAAwAAAABAAMAAAAMAAsAAAABAAMAAAAMAAoAAAABAAMAAAAMAAkAAAABAAMAAAAMAAgAAAABAAMAAAAMAAcAAAABAAMAAAAMAAYAAAABAAMAAAAMAAUAAAABAAMAAAAMAAQAAAABAAMAAAAMAAMAAAABAAMAAAAMAAIAAAABAAMAAAAMAAEAAAABAAMAAAAMAAAAAAABAAMAAAAMAP//AAABAAMAAAAMAP7/AAABAAMAAAAMAP3/AAABAAMAAAAMAPz/AAABAAMAAAAMAPv/AAABAAMAAAAMAPr/AAABAAMAAAAMAPn/AAABAAMAAAANAPn/AAABAAMAAAANAPr/AAABAAMAAAANAPv/AAABAAMAAAANAPz/AAABAAMAAAANAP3/AAABAAMAAAANAP7/AAABAAMAAAANAP//AAABAAMAAAANAAAAAAABAAMAAAANAAEAAAABAAMAAAANAAIAAAABAAMAAAANAAMAAAABAAMAAAANAAQAAAABAAMAAAANAAUAAAABAAMAAAANAAYAAAABAAMAAAANAAcAAAABAAMAAAANAAgAAAABAAMAAAANAAkAAAABAAMAAAANAAoAAAABAAMAAAANAAsAAAABAAMAAAANAAwAAAABAAMAAAANAA0AAAABAAMAAAANAA4AAAABAAMAAAAEAAQAAAABAAMAAADx//P/AQAtAAIAAAAQAPP/AQAvAAIAAAAQAPT/AQAvAAIAAAAQAPX/AQAvAAIAAAAQAPb/AQAvAAMAAAAQAPL/AQAvAAEAAADx//T/AQAtAAIAAADx//X/AQAtAAIAAADx//b/AQAtAAMAAAAPAPL/AQAuAAEAAAAOAPL/AQAuAAEAAAANAPL/AQAuAAEAAAAMAPL/AQAuAAEAAAALAPL/AQAuAAEAAAAKAPL/AQAuAAEAAAAJAPL/AQAuAAEAAAAIAPL/AQAuAAEAAAAHAPL/AQAuAAEAAAAGAPL/AQAuAAEAAAAFAPL/AQAuAAEAAAAEAPL/AQAuAAEAAAADAPL/AQAuAAEAAAACAPL/AQAuAAEAAAABAPL/AQAuAAEAAAAAAPL/AQAuAAEAAAD///L/AQAuAAEAAAD+//L/AQAuAAEAAAD9//L/AQAuAAEAAAD8//L/AQAuAAEAAAD7//L/AQAuAAEAAAD6//L/AQAuAAEAAAD5//L/AQAuAAEAAAD4//L/AQAuAAEAAAD3//L/AQAuAAEAAAD2//L/AQAuAAEAAAD1//L/AQAuAAEAAAD0//L/AQAuAAEAAADz//L/AQAuAAEAAADy//L/AQAuAAEAAADx//L/AQAtAAEAAAAPAPb/AQAuAAMAAAAOAPb/AQAuAAMAAAANAPb/AQAuAAMAAAAMAPb/AQAuAAMAAAALAPb/AQAuAAMAAAAKAPb/AQAuAAMAAAAJAPb/AQAuAAMAAAAIAPb/AQAuAAMAAAAHAPb/AQAuAAMAAAAGAPb/AQAuAAMAAAAFAPb/AQAuAAMAAAAEAPb/AQAuAAMAAAADAPb/AQAuAAMAAAACAPb/AQAuAAMAAAABAPb/AQAuAAMAAAAAAPb/AQAuAAMAAAD///b/AQAuAAMAAAD+//b/AQAuAAMAAAD9//b/AQAuAAMAAAD8//b/AQAuAAMAAAD7//b/AQAuAAMAAAD6//b/AQAuAAMAAAD5//b/AQAuAAMAAAD4//b/AQAuAAMAAAD3//b/AQAuAAMAAAD2//b/AQAuAAMAAAD1//b/AQAuAAMAAAD0//b/AQAuAAMAAADz//b/AQAuAAMAAADy//b/AQAuAAMAAAD4//T/AQAuAAIAAAD4//P/AQAuAAIAAAD3//P/AQAuAAIAAAD2//P/AQAuAAIAAAD1//P/AQAuAAIAAAD0//P/AQAuAAIAAADz//P/AQAuAAIAAADy//P/AQAuAAIAAADy//T/AQAuAAIAAADy//X/AQAuAAIAAADz//X/AQAuAAIAAADz//T/AQAuAAIAAAD0//T/AQAuAAIAAAD0//X/AQAuAAIAAAD1//X/AQAuAAIAAAD1//T/AQAuAAIAAAD2//T/AQAuAAIAAAD2//X/AQAuAAIAAAD3//X/AQAuAAIAAAD3//T/AQAuAAIAAAD4//X/AQAuAAIAAAD5//X/AQAuAAIAAAD5//T/AQAuAAIAAAD5//P/AQAuAAIAAAD6//P/AQAuAAIAAAD6//T/AQAuAAIAAAD6//X/AQAuAAIAAAD7//X/AQAuAAIAAAD7//T/AQAuAAIAAAD7//P/AQAuAAIAAAD8//P/AQAuAAIAAAD8//T/AQAuAAIAAAD8//X/AQAuAAIAAAD9//X/AQAuAAIAAAD9//T/AQAuAAIAAAD9//P/AQAuAAIAAAD+//P/AQAuAAIAAAD+//T/AQAuAAIAAAD+//X/AQAuAAIAAAD///X/AQAuAAIAAAD///T/AQAuAAIAAAD///P/AQAuAAIAAAAAAPP/AQAuAAIAAAAAAPT/AQAuAAIAAAAAAPX/AQAuAAIAAAABAPX/AQAuAAIAAAABAPT/AQAuAAIAAAABAPP/AQAuAAIAAAACAPP/AQAuAAIAAAACAPT/AQAuAAIAAAACAPX/AQAuAAIAAAADAPX/AQAuAAIAAAADAPT/AQAuAAIAAAADAPP/AQAuAAIAAAAEAPP/AQAuAAIAAAAEAPT/AQAuAAIAAAAEAPX/AQAuAAIAAAAFAPX/AQAuAAIAAAAFAPT/AQAuAAIAAAAFAPP/AQAuAAIAAAAGAPP/AQAuAAIAAAAGAPT/AQAuAAIAAAAGAPX/AQAuAAIAAAAHAPX/AQAuAAIAAAAHAPT/AQAuAAIAAAAHAPP/AQAuAAIAAAAIAPP/AQAuAAIAAAAIAPT/AQAuAAIAAAAIAPX/AQAuAAIAAAAJAPX/AQAuAAIAAAAJAPT/AQAuAAIAAAAJAPP/AQAuAAIAAAAKAPP/AQAuAAIAAAAKAPT/AQAuAAIAAAAKAPX/AQAuAAIAAAALAPX/AQAuAAIAAAALAPT/AQAuAAIAAAALAPP/AQAuAAIAAAAMAPP/AQAuAAIAAAAMAPT/AQAuAAIAAAAMAPX/AQAuAAIAAAANAPX/AQAuAAIAAAANAPT/AQAuAAIAAAANAPP/AQAuAAIAAAAOAPP/AQAuAAIAAAAOAPT/AQAuAAIAAAAOAPX/AQAuAAIAAAAPAPX/AQAuAAIAAAAPAPT/AQAuAAIAAAAPAPP/AQAuAAIAAAA=")
tile_set = ExtResource("2_loa2d")

[node name="BotonGuardar" type="TileMapLayer" parent="."]
visible = false
position = Vector2(-3, 20)
tile_map_data = PackedByteArray("AAD3/woAAgAFAAMAAAD6/w0AAgAHAAUAAAD3/w0AAgAFAAUAAAD5/woAAgAGAAMAAAD4/woAAgAGAAMAAAD6/woAAgAHAAMAAAD6/wsAAgAHAAQAAAD6/wwAAgAHAAQAAAD5/w0AAgAGAAUAAAD4/w0AAgAGAAUAAAD3/wsAAgAFAAQAAAD3/wwAAgAFAAQAAAD5/wsAAgAGAAQAAAD4/wwAAgAGAAQAAAD5/wwAAgAGAAQAAAD4/wsAAgAGAAQAAAAEAAQAAAABAAMAAAA=")
tile_set = ExtResource("2_loa2d")

[node name="BotonAtras" type="TileMapLayer" parent="."]
position = Vector2(-3, 20)
tile_map_data = PackedByteArray("AAALAAoAAgAHAAMAAAAIAAoAAgAFAAMAAAALAA0AAgAHAAUAAAAIAA0AAgAFAAUAAAAJAAwAAgAGAAQAAAAJAAsAAgAGAAQAAAAKAAwAAgAGAAQAAAAKAAsAAgAGAAQAAAAIAAsAAgAFAAQAAAAIAAwAAgAFAAQAAAAKAA0AAgAGAAUAAAAJAA0AAgAGAAUAAAAKAAoAAgAGAAMAAAAJAAoAAgAGAAMAAAALAAsAAgAHAAQAAAALAAwAAgAHAAQAAAA=")
tile_set = ExtResource("2_loa2d")

[node name="IconoBotonGuarda" type="TileMapLayer" parent="."]
visible = false
position = Vector2(-1, 20)
tile_map_data = PackedByteArray("AAD4/wsABAASAAAAAAD4/wwABAASAAEAAAD5/wsABAATAAAAAAD5/wwABAATAAEAAAA=")
tile_set = ExtResource("2_loa2d")

[node name="IconoBotonAtras" type="TileMapLayer" parent="."]
position = Vector2(-1, 20)
tile_map_data = PackedByteArray("AAAJAAsABAAFAAAAABAJAAwABAAFAAEAABAKAAsABAAEAAAAABAKAAwABAAEAAEAABA=")
tile_set = ExtResource("2_loa2d")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -46.5
offset_right = 175.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ge4rw")
theme_override_font_sizes/font_size = 48
placeholder_text = "Nombre de usuario"
alignment = 1
max_length = 11

[node name="CapCaracteres" type="Label" parent="."]
layout_mode = 0
offset_left = -115.0
offset_top = 69.0
offset_right = 174.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("3_ge4rw")
theme_override_font_sizes/font_size = 30
text = "(Máximo 11 caracteres)"

[node name="TextoInformativo" type="Label" parent="."]
layout_mode = 0
offset_left = -239.0
offset_top = -201.0
offset_right = 266.0
offset_bottom = -128.0
theme_override_fonts/font = ExtResource("4_sg0or")
theme_override_font_sizes/font_size = 38
text = "INGRESE EL NOMBRE DE USUARIO"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BotonGuardarBoton" to="." method="_on_boton_guardar_boton_pressed"]
[connection signal="pressed" from="BotonAtrasBoton" to="." method="_on_boton_atras_boton_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
